--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "database": {
-        "user": "root",
-        "pass": "",
-        "host": "localhost",
-        "port": "3306",
-        "dbname": "igor_cms_test"
+        "user": null,
+        "pass": null,
+        "host": null,
+        "port": null,
+        "dbname": null
     }
 }
