Migrated database queries out of the routes into dedicated CRUD classes so the application now  relies on a single data-access layer, paving the way for alternative database implementations with  minimal changes outside the CRUD package.

--- a/config.example.json
+++ b/config.example.json
@@ -1,9 +1,9 @@
 {
     "database": {
         "user": null,
-        "pass": null,
+        "password": null,
         "host": null,
         "port": null,
-        "dbname": null
+        "database_name": null
     }
 }
